--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "esbuild src/index.ts --bundle --target=es2020 --format=esm --outfile=dist/index.js"
+    "build": "rollup -c",
+    "check": "tsc --noEmit",
+    "deploy": "npm run build && r1ec deploy \"$(cat PROJECTNAME.txt)\" -f dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "hono": "^4.8.12"
   },
   "devDependencies": {
-    "esbuild": "^0.25.8"
+    "@rollup/plugin-node-resolve": "^16.0.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.3.0",
+    "esbuild": "^0.25.8",
+    "rollup": "^4.53.2",
+    "rollup-plugin-visualizer": "^6.0.5",
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.3"
   }
 }
