--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "rollup -c",
     "check": "tsc --noEmit",
-    "deploy": "npm run build && r1ec deploy \"$(cat PROJECTNAME.txt)\" -f dist/index.js"
+    "deploy": "npm run build && r1ec deploy \"$(cat PROJECTNAME.txt)\" -f dist/index.js",
+    "dev": "tsx watch ./src/dev.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "hono": "^4.8.12"
   },
   "devDependencies": {
+    "@hono/node-server": "^1.19.6",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.3.0",
@@ -23,6 +25,7 @@
     "rollup": "^4.53.2",
     "rollup-plugin-visualizer": "^6.0.5",
     "tslib": "^2.8.1",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
