--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build": "rollup -c",
-    "check": "tsc --noEmit",
+    "typecheck": "tsc --noEmit",
     "deploy": "npm run build && r1ec deploy \"$(cat PROJECTNAME.txt)\" -f dist/index.js",
-    "dev": "tsx watch ./src/dev.ts"
+    "dev": "tsx watch ./src/dev.ts",
+    "lint": "eslint .",
+    "check": "npm run lint && npm run typecheck"
   },
   "keywords": [],
   "author": "",
@@ -17,15 +19,20 @@
     "hono": "^4.8.12"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@hono/node-server": "^1.19.6",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.3.0",
     "esbuild": "^0.25.8",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
+    "jiti": "^2.6.1",
     "rollup": "^4.53.2",
     "rollup-plugin-visualizer": "^6.0.5",
     "tslib": "^2.8.1",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.48.0"
   }
 }
