--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.3.0",
+    "@types/node": "^24.10.1",
+    "dotenv": "^17.2.3",
     "esbuild": "^0.25.8",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
